[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Helpers/Interacts/AreaFreeFight.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 62.8034 )

[node name="AreaFreeFight" type="Node2D"]
script = ExtResource( 1 )

[node name="StartArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea"]
modulate = Color( 0.968627, 1, 0, 1 )
shape = SubResource( 1 )

[connection signal="body_entered" from="StartArea" to="." method="_on_StartArea_body_entered"]
